--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <!--
+      
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -30,7 +31,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <title>React App</title>
+    <title>Prosperna Marketplace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
