--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,44 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+    <script>
+      paypal.Button.render({
+        env: 'sandbox', // Or 'production'
+        style: {
+          size: 'large',
+          color: 'gold',
+          shape: 'pill',
+        },
+        // Set up the payment:
+        // 1. Add a payment callback
+        payment: function(data, actions) {
+          // 2. Make a request to your server
+          return actions.request.post('/api/create-payment')
+            .then(function(res) {
+              // 3. Return res.id from the response
+              // console.log(res);
+              return res.id;
+            });
+        },
+        // Execute the payment:
+        // 1. Add an onAuthorize callback
+        onAuthorize: function(data, actions) {
+          // 2. Make a request to your server
+          return actions.request.post('/api/execute-payment', {
+            paymentID: data.paymentID,
+            payerID:   data.payerID
+          })
+            .then(function(res) {
+              console.log(res);
+              alert('PAYMENT WENT THROUGH!!');
+              // 3. Show the buyer a confirmation message.
+            });
+        }
+      }, '#paypal-button');
+    </script>
   </body>
 </html>
