--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
     
-    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+    <!-- <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script>
       paypal.Button.render({
         env: 'sandbox', // Or 'production'
@@ -88,6 +88,6 @@
             });
         }
       }, '#paypal-button');
-    </script>
+    </script> -->
   </body>
 </html>
